fix: update some popup visible and rcv

--- a/frontend/src/styles/country/results-panel/ResultMap.module.css
+++ b/frontend/src/styles/country/results-panel/ResultMap.module.css
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 70px;
+    height: fit-content;
     background: var(--orchid-tint);
     padding: 6px 10px;
     border-radius: 12px;
